# superbot

./: .gitignore  __main__.py  config.py  loader.py  main.py  pyproject.toml
app/filters/: __init__.py  admin.py
app/handlers/: __init__.py  error.py
app/handlers/user/: menu.py  start.py
app/middlewares/: __init__.py  users.py
database/models/: base.py  user.py
superbot/handlers/: __init__.py  error.py  routers.py
superbot/handlers/user/: __init__.py  menu.py  start.py
utils/: __init__.py  logging.py
